# Futures-Spot-Arbitrage-Binance-V1

./: .gitignore  Cargo.toml  README.md
doc/: 1.init_tables.sql  2.init_table_data.sql
examples/: dev.rs  log.rs  reqwest.rs  rocksdb.rs  stable_coin.rs  test.rs
src/: lib.rs  main.rs
src/binance/: api.rs  client.rs  config.rs  errors.rs  mod.rs  rest_model.rs  util.rs  websockets.rs  ws_model.rs
src/conf/: mod.rs  redis_key.rs
src/db/: mod.rs
src/helper/: log.rs
src/model/: arb_diff_rate.rs  arb_diff_rate_his.rs  arb_diff_rate_info.rs  arb_stable_coin.rs  arb_stable_coin_info.rs  arb_strategy.rs  arb_strategy_ex.rs  arb_strategy_ex_info.rs  mod.rs
src/service/: binance_strategy.rs  common.rs  diff_rate.rs  mod.rs  price.rs  stable_coin_hedging.rs
src/sql/: diff_rate.rs  mod.rs  stable_coin.rs  strategy.rs
