[package]
name = "arbitrage"
version = "0.1.0"
edition = "2021"

[features]
rustls-tls = ["tokio-tungstenite/rustls-tls-webpki-roots", "reqwest/rustls-tls"]
native-tls = ["tokio-tungstenite/native-tls", "reqwest/native-tls"]
default = ["native-tls"]

[dependencies]
toml = "0.5"
anyhow = "1.0.80"
tokio-tungstenite = "0.21"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.24.0", features = ["tokio-comp"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "mysql", "rust_decimal"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.96"
serde_qs = "0.12"
serde_repr = "0.1"
lazy_static = "1.4.0"
chrono = "0.4.23"
futures = "0.3"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"], default-features = false }
url = "2.5"
once_cell = "1.8.0"
env_logger = "0.9"
log = "0.4"
rust_decimal = { version = "1.18.0", features = ["serde-bincode"] }
hex = "0.4"
ring = "0.17"
boolinator = "2.4"
dashmap = "5.5.3"
rocksdb = "0.22.0"
bincode = "1.3.3"